[package]
name = "bevy-react"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.8.1", features = ["dynamic"] }
crossbeam-channel = "0.5.6"
deno_core = "0.149.0"
futures = "0.3.24"
rand = "0.8.5"
tokio = { version = "1.21.0", features = ["full"] }
